# sudo-protocol-indexer

./: .gitignore  INDEXER_UPDATES_APPLIED.md
aptos-indexer-processors-sdk/: Cargo.toml
aptos-indexer-processors-sdk/transaction-stream/src/: transaction_stream.rs
examples/: Readme.md
examples/postgres-basic-events-example/: Cargo.toml  DEPLOYMENT_GUIDE.md  QUICK_REFERENCE.md  README.md  config.yaml  ecosystem.config.js  start-indexer.sh
examples/postgres-basic-events-example/src/: buy_events_model.rs  events_model.rs  main.rs  raffle_events_model.rs
examples/postgres-basic-events-example/src/db/: mod.rs  schema.rs
examples/postgres-basic-events-example/src/db/migrations/2025-03-06-231718_create_events/: up.sql
examples/postgres-basic-events-example/src/db/migrations/2025-03-06-231718_raffle_events/: down.sql  up.sql
examples/postgres-basic-events-example/src/db/migrations/2025-04-05-065133_raffle_events/: down.sql  up.sql
examples/postgres-basic-events-example/src/db/migrations/2025-04-08-172426_buy_events/: down.sql  up.sql
examples/postgres-basic-events-example/src/db/migrations/2025-04-08-231718_raffle_events/: up.sql
