[package]
name = "postgres-basic-events-example"
version = "1.0.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-indexer-processor-sdk = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
field_count = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
lazy_static = "1.4"
parking_lot = "0.12"
chrono = "0.4"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing-subscriber = "0.3"
